docs(ci): update benchmark report [skip ci]